Updated taggable plugin and others functions on frontpages

--- a/app/views/products/_show.html.haml
+++ b/app/views/products/_show.html.haml
@@ -1,7 +1,7 @@
 %li
   %a{:href => "#", :title => "product"}
-    %img{:alt => "product", :src => "images/imgProduct.jpg"}/
-  %h3 Sofá esquinero London
+    %img{:alt => "product", :src => "images/imgProduct.jpg"}
+  %h3= sofa.name
   %span.description Todos los sofás 30% off
   .price
     %strong € 350
