--- a/app/views/admin/dashboard/_sidebar.html.haml
+++ b/app/views/admin/dashboard/_sidebar.html.haml
@@ -2,4 +2,5 @@
   %h1.logo
     %a{:href => "/", :title => "Palsofa Grupo"}
       %span.n Palsofa Grupo
-  %h2.n Venta de sofas - Administración
+  %h3.n Venta de sofas - Administración
+  = link_to('Banners')
