--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -6,7 +6,8 @@
         <label>
           Categoria
         </label>
-        <%= form.select(:category_list, "SOFÁS 3+2,SOFÁS,CAMA,CHAISELONGUE,RELAX,RINCONERAS,BUTACAS,DESCANSO,OUTLET".split(','), :multiple => true, :style => 'height: 100px;') %>
+        <%= form.select(:category_list, " ,SOFÁS 3+2,SOFÁS,CAMA,CHAISELONGUE,RELAX,RINCONERAS,BUTACAS,DESCANSO,OUTLET".split(','), :multiple => true, :style => 'height: 100px;') %>
+        | <%= form.select(:special_list, " ,Oportunidad,Novedad,Mas vendido".split(','), :multiple => true, :style => 'height: 100px;') %>
       </li>
     </ol>
   </fieldset>
