--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -10,8 +10,9 @@
       %li
         = link_to('PRODUCTOS', products_path, :title => "Productos")
         %ul
-          - @categories.each do |category|
-            %li= link_to(category.name, {:id => category.name, :action => 'show'}, :title => category.name)
+          - if @categories
+            - @categories.each do |category|
+              %li= link_to(category.name, {:id => category.name, :action => 'show'}, :title => category.name)
       %li
         = link_to('SERVICIOS', {:controller => 'pages', :action => 'servicios'}, :title => "Nuestros servicios")
       %li
