--- a/app/views/products/_show.html.haml
+++ b/app/views/products/_show.html.haml
@@ -1,5 +1,5 @@
 %li
-  = link_to(image_tag(sofa.images[0].image.url(:small)), sofa.images[0].image.url(), :title => sofa.name) if !sofa.images.empty?
+  = link_to(image_tag(sofa.images[0].image.url(:small)), sofa.images[0].image.url(), :title => sofa.name, :rel => "prettyPhoto[pp_gal#{sofa.id}]") if !sofa.images.empty?
   %h3= sofa.name
   %span.description= sofa.description
   .price
