--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -8,8 +8,8 @@
         %li Parking propio
         %li Financiamos su compra
     .banner
-      %a{:href => "#", :title => "banner"}
-        %img.block{:alt => "banner", :src => "images/banner.jpg"}/
+      - image = Image.first(:conditions => {:section => 'banner'})
+      = link_to(image_tag(image.image.url), image.description, :alt => "banner")
   #body
     %h5 SERVICIOS
     %ul.listServicios
