--- a/app/views/pages/trabajo.html.haml
+++ b/app/views/pages/trabajo.html.haml
@@ -6,8 +6,8 @@
         Buscamos tu ayuda,escribe a:empleo@palsofa.com
         Esperamos tu CV y tus datos.
     .banner
-      %a{:href => "#", :title => "banner"}
-        %img.block{:alt => "banner", :src => "images/banner.jpg"}/
+      - image = Image.first(:conditions => {:section => 'banner'})
+      = link_to(image_tag(image.image.url), image.description, :alt => "banner")
   #body
     %h5 EMPLEO
     .contentTrabajo
