--- a/app/views/pages/servicios.html.haml
+++ b/app/views/pages/servicios.html.haml
@@ -9,7 +9,7 @@
         %li Financiamos su compra
     .banner
       - image = Image.first(:conditions => {:section => 'banner'})
-      = link_to(image_tag(image.image.url), image.description, :alt => "banner")
+      = link_to(image_tag(image.image.url), image.description, :alt => "banner") if image
   #body
     %h5 SERVICIOS
     %ul.listServicios
