Removed innecesary files and updated banner in store page

--- a/app/views/tiendas/index.html.haml
+++ b/app/views/tiendas/index.html.haml
@@ -6,8 +6,8 @@
     .selectTiendas
       = render :partial => '/shared/selectienda'
     .banner
-      %a{:href => "#", :title => "banner"}
-        %img.block{:alt => "banner", :src => "images/banner.jpg"}/
+      - image = Image.first(:conditions => {:section => 'banner'})
+      = link_to(image_tag(image.image.url), image.description, :alt => "banner") if image
   #body
     %h5 TIENDAS
     %ul.listTiendas
