Finished total site

--- a/app/views/admin/images/_form.html.erb
+++ b/app/views/admin/images/_form.html.erb
@@ -6,7 +6,11 @@
         <label>
           Seccion (si es necesario)
         </label>
-        <%= form.select(:section, {'Imagen para la pagina principal' => 'slide-index', 'Imagen para cupon' => 'cupon', 'Banner' => 'banner'}) %>
+        <%= form.select(:section, {'Imagen para la pagina principal' => 'slide-index', 
+                                   'Imagen para cupon' => 'cupon',
+                                   'Banner' => 'banner',
+                                   'Iconos sociales' => 'footer'
+                                  }) %>
       </li>
     </ol>
   </fieldset>
