--- a/app/views/products/_show.html.haml
+++ b/app/views/products/_show.html.haml
@@ -8,8 +8,4 @@
     %br.clear/
   .comparte
     %b Comparte en:
-    %a.btnFacebook{:href => "#", :title => "facebook"} Facebook
-    %span l
-    %a.btnTwitter{:href => "#", :title => "facebook"} twitter
-    %span l
-    %a.btnRecomienda{:href => "#", :title => "facebook"} Recomienda
+    = render :partial => 'share'
