added corrections and feedback

--- a/app/views/admin/helpers/_header.html.erb
+++ b/app/views/admin/helpers/_header.html.erb
@@ -11,4 +11,5 @@
   <li><%= link_to('Productos', {:controller => 'admin/products'}) %></li>
   <li><%= link_to('Imagenes', {:controller => 'admin/images'}) %></li>
   <li><%= link_to('Newsletter', {:controller => 'admin/newsletters'}) %></li>
+  <li><%= link_to('Trabajos', {:controller => 'admin/jobs'}) %></li>
 </ul>
