added new text on home page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,8 +6,9 @@
   .sobreNosotros
     .boxLeft
       %h3 Sobre Nosotros
-      %p El Lorem ipsum Grupo Palsofá se dedica a la venta de sofás desde hace más de 15 años. En la actualidad posee 5 tiendas.
-      %p Su posicionamiento como empresa: sofás de buena calidad a precio económico. El Lorem ipsum Grupo Palsofá se dedica a la venta de sofás desde hace más de 15 años. En la actualidad posee 5 tiendas. Su posicionamiento como empresa: sofás de buena calidad a precio económico.
+      %p Somos el grupo líder en ventas de sofás en Vizcaya. En nuestras 5 tiendas encontrará la gama más amplia en sofás en piel y tela, modelos 3+2 , sofás cama, relax, butacas, chaiselongue, sofás rinconera.
+      %p El Grupo Palsofá es garantía de variedad, calidad y precio. Acérquese a conocernos y seguro encontrará el sofá que está buscando.
+      
       %a.btnComprarSofa{:href => "#", :title => "comprar sofa"} Comprar Sofa
     .boxRight
       %ul.ProductsHome
