--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,7 +12,7 @@
         %ul
           - if Product.category_counts
             - Product.category_counts.each do |category|
-              %li= link_to(category.name, {:id => category.name, :action => 'show'}, :title => category.name)
+              %li= link_to(category.name, {:id => category.name, :action => 'show', :controller => 'products'}, :title => category.name)
       %li
         = link_to('SERVICIOS', {:controller => 'pages', :action => 'servicios'}, :title => "Nuestros servicios")
       %li
