--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
         $('#link_products').hover(function(){
           $('ul#list').show(250);
         });
-        $('.link_others').hover(function(){console.log('mierda');}, function(){
+        $('.link_others').hover(function(){
           $('ul#list').hide(250);
           console.log('mierda');
         })
@@ -29,7 +29,7 @@
         $('#link_products').hover(function(){
           $('ul#list').show(250);
         });
-        $('.link_others').hover(function(){console.log('mierda');} ,function(){
+        $('.link_others').hover(function(){
           $('ul#list').hide(250);
           console.log('mierda');
         })
