--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,42 +4,24 @@
     %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}
     %title= h(yield(:title) || "Grupo Palsofa")
     = stylesheet_link_tag 'styles', 'main', 'nivo-slider', 'prettyPhoto'
-    - if(params[:action] == 'index' && params[:controller] == 'pages')
-      = javascript_include_tag 'jquery', 'nivo-slider'
-      :javascript
-        $(document).ready(function(){
+    = javascript_include_tag 'jquery132', 'nivo-slider'
+    :javascript
+      $(document).ready(function(){
         $('#link_products').hover(function(){
           $('ul#list').show(250);
         });
         $('.link_others').hover(function(){
           $('ul#list').hide(250);
-          console.log('mierda');
         })
+        $('#newsletter_email').focus(function(){
+          $(this).val('');
         });
-        $(document).ready(function(){
-          $('#newsletter_email').focus(function(){
-            $(this).val('');
-          });
-          $('#slider').nivoSlider();
+        $('#newsletter_email').focus(function(){
+          $(this).val('');
         });
-    - else
-      = javascript_include_tag 'jquery132', 'prettyPhoto'
-      :javascript
-        $(document).ready(function(){
-        $('#link_products').hover(function(){
-          $('ul#list').show(250);
-        });
-        $('.link_others').hover(function(){
-          $('ul#list').hide(250);
-          console.log('mierda');
-        })
-        });
-        $(document).ready(function(){
-          $("a[rel^='prettyPhoto']").prettyPhoto();
-          $('#newsletter_email').focus(function(){
-            $(this).val('');
-          });
-        });
+        $('#slider').nivoSlider();
+        $("a[rel^='prettyPhoto']").prettyPhoto();
+      });
     /[if IE 6]
       <link rel="stylesheet" type="text/css" href="stylesheets/ie.css" />
   %body
